Partially implement Function

--- a/include/BLIB/Scripts/TODO
+++ b/include/BLIB/Scripts/TODO
@@ -1,5 +1,6 @@
 upgrade grammar for reference types
 upgrade grammar for parenthesis
+upgrade grammar for return statement
 upgrade grammar with something above Value to capture references, functions, etc. Probably just provide promotion from LValue to Value
 In Script: Have base handleNode which can create callstack on error. Have function table from node type -> handler
 In script parser: Flatten parse tree. Arg list, parameter list, and statement list are good places to flatten
