Finish script grammar

--- a/include/BLIB/Scripts/TODO
+++ b/include/BLIB/Scripts/TODO
@@ -1,8 +1,6 @@
 upgrade grammar for reference types
-upgrade grammar for parenthesis
-upgrade grammar for return statement
-upgrade grammar with something above Value to capture references, functions, etc. Probably just provide promotion from LValue to Value
-upgrade grammar boolean algebra and comparators
+Reference -> Amp Id. Special assignment to capture
 In Script: Have base handleNode which can create callstack on error. Have function table from node type -> handler
 In script parser: Flatten parse tree. Arg list, parameter list, and statement list are good places to flatten
 Separate node parse from script so that other classes may evaluate nodes easily. Only need to pass Node and symbol table
+In parser, need to consider current token as part of subsequence for reductionsPossible?
